--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,82 @@
-Hello Public.
+<!doctype html>
+<html>
+    <head>
+        <title>신나는 영어단어퀴즈 만들기</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="./css/index.css" crossorigin="anonymous">
+    </head>
+    <body>
+        <div class="container">
+            <div class="card-deck mb-3 text-center">
+                <div class="card mb-4 shadow-sm">
+                    <div class="card-header text-white bg-primary">
+                        <h4 class="my-0 font-weight-normal">What is the meaning of the word?</h4>
+                    </div>
+                    <div class="card-body align-middle">
+                        <h1 class="card-title card-title-ext">Word</h1>
+                    </div>
+                    <hr class="mt-2 mb-3"/>
+                    <div class="card-body">
+                        <h1 class="card-title card-title-ext text-flip">단어</h1>
+                    </div>
+                    <div class="card-header text-white text-flip bg-primary">
+                        <h4 class="my-0 font-weight-normal">What is the word in English?</h4>
+                    </div>
+                </div>
+                <div class="card mb-4 shadow-sm">
+                    <div class="card-header text-white bg-primary">
+                        <h4 class="my-0 font-weight-normal">What is the meaning of the word?</h4>
+                    </div>
+                    <div class="card-body align-middle">
+                        <h1 class="card-title card-title-ext">Word</h1>
+                    </div>
+                    <hr class="mt-2 mb-3"/>
+                    <div class="card-body">
+                        <h1 class="card-title card-title-ext text-flip">단어</h1>
+                    </div>
+                    <div class="card-header text-white text-flip bg-primary">
+                        <h4 class="my-0 font-weight-normal">What is the word in English?</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="card-deck mb-3 text-center">
+                <div class="card mb-4 shadow-sm">
+                    <div class="card-header text-white bg-primary">
+                        <h4 class="my-0 font-weight-normal">What is the meaning of the word?</h4>
+                    </div>
+                    <div class="card-body align-middle">
+                        <h1 class="card-title card-title-ext">Word</h1>
+                    </div>
+                    <hr class="mt-2 mb-3"/>
+                    <div class="card-body">
+                        <h1 class="card-title card-title-ext text-flip">단어</h1>
+                    </div>
+                    <div class="card-header text-white text-flip bg-primary">
+                        <h4 class="my-0 font-weight-normal">What is the word in English?</h4>
+                    </div>
+                </div>
+                <div class="card mb-4 shadow-sm">
+                    <div class="card-header text-white bg-primary">
+                        <h4 class="my-0 font-weight-normal">What is the meaning of the word?</h4>
+                    </div>
+                    <div class="card-body align-middle">
+                        <h1 class="card-title card-title-ext">Word</h1>
+                    </div>
+                    <hr class="mt-2 mb-3"/>
+                    <div class="card-body">
+                        <h1 class="card-title card-title-ext text-flip">단어</h1>
+                    </div>
+                    <div class="card-header text-white text-flip bg-primary">
+                        <h4 class="my-0 font-weight-normal">What is the word in English?</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    </body>
+</html>
