--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>voca-printing-frontend</title>
+    <title>Vocabulary Printing</title>
   </head>
   <body>
     <div id="app"></div>
